# cli-menu-maker

./: Cargo.toml  README.MD  commands.example.yml
src/: main.rs
