[package]
name = "cli-menu-maker"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A small program to run cli commands from a menu!"
repository = "https://github.com/wychwitch/cli-menu-maker"
keywords = ["cli", "productivity", "command-line", "script"]
categories = ["command-line-utilities"]

[[bin]]
name = "climenu"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console-menu = "0.1.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
